--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "fake-auth": "^0.0.8",
     "localforage": "^1.7.3",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.15.1"
   }
 }
